<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#F1F6F3"
    android:gravity="center_horizontal"

    tools:ignore="ExtraText">
    tools:context=".reciveotp_page">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/otv"
        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
        android:contentDescription="TODO" />
    <TextView
        android:text="@string/otp_verification"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#036007"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/we_will_send_you_an"
            android:textColor="#656262"

            android:textSize="16sp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/one_time_password"
            android:textColor="#0B0B0B"

            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="6dp"
        android:text="@string/on_this_mobile_number"
        android:textColor="#656262"

        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="TextSizeCheck" />
    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp"
            android:background="@color/white"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_shape"
            android:ems="1"
            android:textColorHint="#A01C1C1C"
            android:hint="@string/type_your_phone_number"

            android:inputType="phone"

            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#1C1C1C"
            android:textSize="20sp"
            android:textStyle="bold|normal"
            android:autofillHints=""
            tools:ignore="TextFields,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/continuBtn"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:backgroundTint="#036007"
                android:text="continue"
                android:textAllCaps="false"


                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                tools:ignore="HardcodedText,TextSizeCheck,VisualLintButtonSize,TextContrastCheck" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>